--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 # resume
 
-Jacob953's resume in Latex & pdf
+Jacob953's resumes in Latex & PDF
 
 Considering the inconsistent purpose, the content of the RUN and WORK varies.
