--- a/README
+++ b/README
@@ -1,11 +1,10 @@
 # resume
 
-Jacob953's resumes in Latex & PDF
+> Jacob953's resumes in Latex & PDF
 
 Considering the inconsistent purpose, the content of the RUN and WORK varies.
 
 There is some .md at homepage for easy reading, but...
-
 Never APPLY .md AS RESUME, PDF ALWAYS BEST.
 
-By the way, using .docx to structure RESUME is a good way as well.
+By the way, using .docx to structure RESUME might be a good way as well.
