--- a/LaTeX/RESUME-WORK-EN.tex
+++ b/LaTeX/RESUME-WORK-EN.tex
@@ -126,15 +126,15 @@
   \centerline{
   \footnotesize \textbf{Portf:} \href{https://jacob953.com/}{https://jacob953.com/} |
   \textbf{Email:} \href{mailto:i@jacob953.com}{i@jacob953.com} | 
-  \textbf{LinkedIn:} \href{https://www.linkedin.cn/incareer/in/junfeng-yu-578456248}{https://www.linkedin.com/in/jacob953/} |
+  \textbf{LinkedIn:} \href{https://www.linkedin.com/in/jacob953}{https://www.linkedin.com/in/jacob953/} |
   \textbf{Mobile:} +86 155 8521 0953}
 \end{tabular*}
-\vspace{-10pt}
-\vspace{-4pt}
+% \vspace{-10pt}
+% \vspace{-4pt}
 %-----------Education Background-----------------
-\vspace{-1pt}
+% \vspace{-1pt}
 \section{Education}
-\vspace{-4pt}
+% \vspace{-4pt}
 \resumeSubheading
   {Central South University}{Changsha, Hunan}
   {Bachelor of Information Security}{2019.9 - 2023.6}
@@ -143,14 +143,30 @@
       {Probability and Statistics, Computer Network, Distributed Systems and Cloud Computing, and etc.}
   \resumeItemListEnd
 
-\vspace{-4pt}
+% \vspace{-4pt}
 %-----------Professional Experience-----------------
 \section{Professional}
   \resumeSubHeadingListStart
-      
+
+    \resumeSubheading
+      {Tencent - NoSQL}{Chengdu}
+      {R\&D Engineer @ Vector Database}{ 2023.11 - Present}
+      \resumeItemListStart
+      	\resumeItem{0-1-5-10 Quality}
+		{Enabled proactive issue detection across 7 abnormal scenarios, identifying 1.75 million alerts and converging to 15,000 with a 99.1\% effectiveness rate, and performed 23 root cause diagnoses, enhancing user trust through timely optimizations and addressing potential internal framework issues.}
+		\resumeItem{OpsCenter}
+        {Significantly reduces operational and communication costs for on-duty personnel by facilitating data drilling and daily synchronization of in-depth data. It features a quality dashboard for visualizing regional issues, instance management for comprehensive oversight, and daily report push for timely updates.}
+		\resumeItem{PDF Parser}
+        {Enhances PDF parsing capabilities, improving performance by 1.5 times and addressing ultra-small title recognition, and featured a modular architecture for core component isolation, resolves parsing defects, implements project management scripts for quality assurance, and utilizes algorithms for image parsing to improve recall.}
+		% \resumeItem{ReBalance}
+  %       {The only intern in the group who made project presentations to four project leaders at the same time and shared the research results of CCEH thesis.}
+		\resumeItem{Data Pipeline}
+        {Ensured architectural scalability and code readability, and featured a design for heterogeneous data sources, a project startup framework, various common components, and core scheduling components for managing operational data and task progress.}
+      \resumeItemListEnd
+
     \resumeSubheading
       {Huawei - 2012 Laboratory}{Xi'an}
-      {Software Engineer @ Gauss Lab}{ 2022.7 - Present}
+      {Software Engineer @ Gauss Lab}{ 2022.7 - 2022.11}
       \resumeItemListStart
       	\resumeItem{Kernel Clipping}
 		{Responsible for the cutting of the database kernel, pre-research the database kernel in small memory scenarios, and conserve the memory usage to 10\% of the original (from 1.6 GB cropped to 200 MB).}
@@ -158,6 +174,44 @@
         {The only intern in the group who made project presentations to four project leaders at the same time and shared the research results of CCEH thesis.}
       \resumeItemListEnd
           
+  %   \resumeSubheading
+  %     {Open Source Promotion Plan - ShardingSphere}{Remote}
+  %     {Student Developer}{ 2022.7 - 2022.10}
+  %     \resumeItemListStart
+  %       \resumeItem{Engine Design}
+  %         {Design a dynamic test engine for SQL parsing, load more than 110,000 SQL test samples from MySQL and PostgreSQL, and complete the parameterized test of the SQL parser within 1 minute.}
+  %       \resumeItem{Optimization}
+  %         {Migrating test coverage reports from Travis to GitHub Action saved CI time by at least 3-5 minutes.}
+  %     \resumeItemListEnd
+    
+  %   \resumeSubheading
+  %     {CloudWeGO - Netpoll}{Reomte}
+  %     {Awesome Contributor}{2022.7 - 2022.9}
+  %     \resumeItemListStart
+  %     	\resumeItem{Design SDK}
+		% {Design a pure Golang version (without CGO) high-performance io\_uring I/O poller SDK, adopting the shared memory scheme, and implementing asynchronous I/O by designing Submit, Complete queues and memory barriers.}
+		% \resumeItem{Performance}
+  %       {Approximately 3 times improvement compared to epoll, implemented default POLL for poller using io\_uring.}
+  %     \resumeItemListEnd
+
+      
+  \resumeSubHeadingListEnd
+  
+% \vspace{-8pt}
+%-----------Projects-----------------
+\section{Projects}
+\resumeSubHeadingListStart 
+
+    \resumeSubheading
+      {Behavior3Gen - Tencent}{Remote}
+      {Maintainer}{ 2024.11 - Present}
+      \resumeItemListStart
+        \resumeItem{Design \& Implement}
+          {A secondary development tool for the Behavior3 low-code platform rule engine, designed to simplify the customization and generation of .b3 JSON files for editor integration.}
+        \resumeItem{Influence}
+          {Published "Behavior3Gen: A Friendly and Safe Behavior3 Framework Secondary Development Generation Tool" on Tencent Intranet KM Platform and was recommended on the homepage.}
+      \resumeItemListEnd
+
     \resumeSubheading
       {Open Source Promotion Plan - ShardingSphere}{Remote}
       {Student Developer}{ 2022.7 - 2022.10}
@@ -177,51 +231,42 @@
 		\resumeItem{Performance}
         {Approximately 3 times improvement compared to epoll, implemented default POLL for poller using io\_uring.}
       \resumeItemListEnd
-
-      
-  \resumeSubHeadingListEnd
-  
-\vspace{-8pt}
-%-----------Projects-----------------
-\section{Projects}
-\resumeSubHeadingListStart 
-   
          
-   \resumeSubheadingCompact{Vehicle Re-identification Defence System}{ 2020.11 - 2021.11}{Research Assistant at the Systems Security Lab, CSU}
-   \resumeItemListStart
-        \resumeItemSingle{Participated in building the feature extraction \& related testing of vehicle re-identification defence system based on Transformer, and independently designed the island of GLOM by Python.}
-        \resumeItemSingle{Reported 2 papers at the group per 2 weeks, and self-researched on the interpretability of neural network.}
-    \resumeItemListEnd
-\vspace{-4pt}
-   \resumeSubheadingCompact{RoboCup China Open 2D Soccer Simulation}{2021.5 -  2021.9}
-    {Varsity Captain of the Team Yunlu, CSU}
-      \resumeItemListStart
-        \resumeItemSingle{Accelerated the control mechanism and strategy to increase shot hit rate by 21.36\% with certain robustness.}
-        \resumeItemSingle{Won 2nd price on RoboCup China Open 2D Soccer Simulation and published one paper as the first author in ICRAIC 2021.}
-      \resumeItemListEnd
+%    \resumeSubheadingCompact{Vehicle Re-identification Defence System}{ 2020.11 - 2021.11}{Research Assistant at the Systems Security Lab, CSU}
+%    \resumeItemListStart
+%         \resumeItemSingle{Participated in building the feature extraction \& related testing of vehicle re-identification defence system based on Transformer, and independently designed the island of GLOM by Python.}
+%         \resumeItemSingle{Reported 2 papers at the group per 2 weeks, and self-researched on the interpretability of neural network.}
+%     \resumeItemListEnd
+% \vspace{-4pt}
+%    \resumeSubheadingCompact{RoboCup China Open 2D Soccer Simulation}{2021.5 -  2021.9}
+%     {Varsity Captain of the Team Yunlu, CSU}
+%       \resumeItemListStart
+%         \resumeItemSingle{Accelerated the control mechanism and strategy to increase shot hit rate by 21.36\% with certain robustness.}
+%         \resumeItemSingle{Won 2nd price on RoboCup China Open 2D Soccer Simulation and published one paper as the first author in ICRAIC 2021.}
+%       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
  
-\vspace{-8pt}
+% \vspace{-8pt}
 %-----------Publication & Patents-----------------
-\section{Publication \& Patents}
+% \section{Publication \& Patents}
 
-    \resumeItem{}{\textbf{J., Yu}, Q., Zhao and W., Zhuang et al., "Decision and Evaluation of Ordering and Transshipment Schemes Based on Multi-objective Programming," 2021 5th Annual International Conference on Data Science and Business Analytics (ICDSBA), 2021, pp. 474-478, doi: 10.1109/ICDSBA53075.2021.00097.}
+%     \resumeItem{}{\textbf{J., Yu}, Q., Zhao and W., Zhuang et al., "Decision and Evaluation of Ordering and Transshipment Schemes Based on Multi-objective Programming," 2021 5th Annual International Conference on Data Science and Business Analytics (ICDSBA), 2021, pp. 474-478, doi: 10.1109/ICDSBA53075.2021.00097.}
     
-    \resumeItem{}{\textbf{Junfeng Yu} et al., "The Research of RoboCup2D Player Shooting Technique Based on Fuzzy Control," International Conference on Robotics Automation and Intelligent Control (ICRAIC 2021), 2022 J. Phys.: Conf. Ser. 2203 012059.}
+%     \resumeItem{}{\textbf{Junfeng Yu} et al., "The Research of RoboCup2D Player Shooting Technique Based on Fuzzy Control," International Conference on Robotics Automation and Intelligent Control (ICRAIC 2021), 2022 J. Phys.: Conf. Ser. 2203 012059.}
     
-    \resumeItem{}{\textbf{Junfeng Yu}, (2022). \textit{Darker Corners of Go (Chinese Version)}. Beijing: Turing (Under Review)}
+%     \resumeItem{}{\textbf{Junfeng Yu}, (2022). \textit{Darker Corners of Go (Chinese Version)}. Beijing: Turing (Under Review)}
     
-\vspace{-5pt}
+% \vspace{-5pt}
 %--------CONFERENCES & SERVICES------------
-\section{Activities \& Awards}
+% \section{Activities \& Awards}
     
-    \resumeItem{Awards}{2 National Awards(2nd Prize of RoboCup China Open 2D Soccer Simulation, and Outstanding Completion of 2021 CASTIC), 3 Provincial Awards(2nd Prize of the 14th Challenge Cup for College Student, 2nd Prize of the 7th Internet+ CCB Cup for College Student, and Grand Prize of the 15th Shenghua Cup for College Student), several Shool-Level Awards, etc.}
+%     \resumeItem{Awards}{2 National Awards(2nd Prize of RoboCup China Open 2D Soccer Simulation, and Outstanding Completion of 2021 CASTIC), 3 Provincial Awards(2nd Prize of the 14th Challenge Cup for College Student, 2nd Prize of the 7th Internet+ CCB Cup for College Student, and Grand Prize of the 15th Shenghua Cup for College Student), several Shool-Level Awards, etc.}
     
     
-    \resumeItem{Organizations}{The president of the school-funded Apple Lab for Apple Tech Talk; The captain of the school-funded team Yunlu for RoboCup; The grade president of the Computer Science Department for department-level activities.}
+%     \resumeItem{Organizations}{The president of the school-funded Apple Lab for Apple Tech Talk; The captain of the school-funded team Yunlu for RoboCup; The grade president of the Computer Science Department for department-level activities.}
         
-\vspace{-4pt}
+% \vspace{-4pt}
 %-----------STATS-----------------
 \section{Skills}
 
