--- a/LaTeX/RESUME-WORK-EN.tex
+++ b/LaTeX/RESUME-WORK-EN.tex
@@ -153,15 +153,15 @@
       {R\&D Engineer @ Vector Database}{ 2023.11 - Present}
       \resumeItemListStart
       	\resumeItem{0-1-5-10 Quality}
-		{Enabled proactive issue detection across 7 abnormal scenarios, identifying 1.75 million alerts and converging to 15,000 with a 99.1\% effectiveness rate, and performed 23 root cause diagnoses, enhancing user trust through timely optimizations and addressing potential internal framework issues.}
+		{Actively detected seven abnormal scenarios, diagnosing 23 root causes with a total of 1.75 million discoveries, reducing to 15,000 through the diagnostic system, achieving a 99.1\% convergence rate. It proactively identifies root causes before clients, enhancing user trust and uncovering potential internal framework issues to ensure project quality.}
 		\resumeItem{OpsCenter}
-        {Significantly reduces operational and communication costs for on-duty personnel by facilitating data drilling and daily synchronization of in-depth data. It features a quality dashboard for visualizing regional issues, instance management for comprehensive oversight, and daily report push for timely updates.}
+        {Significantly reduced the time for on-duty personnel in operational data and maintenance tasks. It visualized regional issue events and their diagnostic routing details through a quality dashboard and instance management, unifying access to various middleware platforms, and streamlined problem investigation and facilitated daily deep data synchronization.}
 		\resumeItem{PDF Parser}
-        {Enhances PDF parsing capabilities, improving performance by 1.5 times and addressing ultra-small title recognition, and featured a modular architecture for core component isolation, resolves parsing defects, implements project management scripts for quality assurance, and utilizes algorithms for image parsing to improve recall.}
+        {Enabled PDF file parsing, covering most scenarios such as image-text parsing, small title recognition, cross-page table merging, cross-page paragraph merging, and multi-column parsing. Performance had improved to nearly 1.5x faster, with an average parsing time of under 200 ms per page in serial mode, significantly enhancing data cleaning and user recall effectiveness.}
 		% \resumeItem{ReBalance}
   %       {The only intern in the group who made project presentations to four project leaders at the same time and shared the research results of CCEH thesis.}
 		\resumeItem{Data Pipeline}
-        {Ensured architectural scalability and code readability, and featured a design for heterogeneous data sources, a project startup framework, various common components, and core scheduling components for managing operational data and task progress.}
+        {Designed for heterogeneous data sources, allowing seamless expansion of various databases and storage types. It includes a project startup framework (service startup, HealthCheck, pre-start) and common components (task state machines, logging) to enable team members to focus on business development.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -207,9 +207,9 @@
       {Maintainer}{ 2024.11 - Present}
       \resumeItemListStart
         \resumeItem{Design \& Implement}
-          {A secondary development tool for the Behavior3 low-code platform rule engine, designed to simplify the customization and generation of .b3 JSON files for editor integration.}
+          {Developed a secondary tool for the Behavior3 low-code platform's rule engine, generating .b3 files to simplify node customization, prevent service startup panics, and manage personalized nodes.}
         \resumeItem{Influence}
-          {Published "Behavior3Gen: A Friendly and Safe Behavior3 Framework Secondary Development Generation Tool" on Tencent Intranet KM Platform and was recommended on the homepage.}
+          {An article titled "Behavior3Gen: A User-Friendly and Secure Behavior3 Framework Development Tool" was published on the internal KM platform, gaining recognition and being featured on the homepage.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -272,7 +272,7 @@
 
   	\resumeItem
       {Programming Language}
-      {Golang(40k LOC), Java(20k LOC), C/C++(20k LOC), JavaScript, Python, ANTLR4}
+      {Golang(170k LOC), Java(20k LOC), C/C++(100k LOC), Python(500k LOC), JavaScript, ANTLR4}
     
     \resumeItem
       {Familiar Framework \& Skillset}
