--- a/LaTeX/RESUME-WORK-CN.tex
+++ b/LaTeX/RESUME-WORK-CN.tex
@@ -137,7 +137,7 @@
 % \vspace{-4pt}
 \resumeSubheading
   {中南大学}{长沙, 湖南}
-  {信息安全学士在读}{2019.9 - 2023.6}
+  {信息安全学士}{2019.9 - 2023.6}
   \resumeItemListStart
     \resumeItem{课程}
       {线性代数，概率与统计，计算机网络，编译器原理，操作系统与安全，
@@ -269,7 +269,7 @@
 \section{专业技能}
   	\resumeItem
       {编程语言}
-      {Golang(40k LOC), Java(20k LOC), C/C++(20k LOC), JavaScript, Python, ANTLR4}
+      {Golang(170k LOC), Java(20k LOC), C/C++(100k LOC), Python(500k LOC), JavaScript, ANTLR4}
     \resumeItem
       {框架 \& 技术栈}
       {数据库内核开发 (C/Java/ANTLR4), 基础架构开发 (Golang), Web 开发 (Java/Golang)}
